--- a/coc-settings.json
+++ b/coc-settings.json
@@ -14,9 +14,5 @@
   "explorer.width": 30,
   "explorer.icon.enableNerdfont": true,
   "explorer.previewAction.onHover": false,
-  "explorer.icon.enableVimDevicons": true,
-  "explorer.keyMappings": {
-    "<cr>": ["expandable?", "expand", "open"],
-    "v": "open:vsplit"
-  }
+  "explorer.icon.enableVimDevicons": true
 }
